--- a/Volunteer Iowa Site/Content/Site.css
+++ b/Volunteer Iowa Site/Content/Site.css
@@ -1,12 +1,12 @@
 ﻿html {
-    background-color: #595959;
+    background-color: #6f7374;
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: #f2f2f2;
-    border-top: solid 10px #000;
+    background-color: #6f7374;
+    /*border-top: solid 10px #000;*/
     color: #333;
     font-size: .85em;
     font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-    color: #333;
+    color: #efb54a;
     outline: none;
     padding-left: 3px;
     padding-right: 3px;
@@ -28,7 +28,7 @@ a {
     }
 
     a:hover {
-        background-color: #c7d1d6;
+        /*background-color: #c7d1d6;*/
     }
 
 header, footer, hgroup,
@@ -93,20 +93,33 @@ h5, h6 {
 
 /* main layout
 ----------------------------------------------------------*/
+.header-top-color {
+background-color: #595959;
+width: 100%;
+height: 235px;
+position: absolute;
+}
+
 .content-wrapper {
     margin: 0 auto;
     max-width: 960px;
+    padding: 70px;
+    position: relative;
 }
 
 #body {
     background-color: #f2f2f2;
+
     clear: both;
     /*padding-bottom: 35px;*/
-    padding: 0 20px 35px 20px;
+    padding: 20px 20px 35px 20px;
+    width: 90%;
+    margin: 0 auto;
+    position: relative;
 }
 
     .main-content {
-        background: url("../Images/accent.png") no-repeat;
+        /*background: url("../Images/accent.png") no-repeat;*/
         padding-left: 10px;
         padding-top: 30px;
     }
@@ -121,7 +134,7 @@ header .content-wrapper {
 
 footer {
     clear: both;
-    background-color: #e2e2e2;
+    /*background-color: #e2e2e2;*/
     font-size: .8em;
     height: 100px;
 }
@@ -151,14 +164,15 @@ footer {
     font-size: .85em;
     margin: 0 0 10px;
     text-align: right;
+   
 }
 
     #login a {
-        background-color: #d3dce0;
         margin-left: 10px;
         margin-right: 3px;
         padding: 2px 3px;
         text-decoration: none;
+         color:#efb54a;
     }
 
     #login a.username {
@@ -180,34 +194,44 @@ footer {
 
 /* menu
 ----------------------------------------------------------*/
-.nav-menu-wrap {
-    
-}
-ul#menu {
+.main-nav {
+    height: 4em;
+    background-color: #bf9d5e;
+    margin-bottom: 10px;
+    border: 1px #efb54a solid;
     font-size: 1.3em;
     font-weight: 600;
-    margin: 0 0 5px;
+    margin: 13px 0 0;
     padding: 0;
     text-align: left;
+    
 }
-
-    ul#menu li {
-        display: inline;
-        list-style: none;
-        padding-left: 15px;
-    }
-
-        ul#menu li a {
-            background: none;
-            color: #999;
-            text-decoration: none;
-        }
-
-        ul#menu li a:hover {
-            color: #333;
-            text-decoration: none;
-        }
-
+.main-nav a {
+    display: inline-block;
+    position: relative;
+    text-align: center;
+    height:86%;
+    width:32%;
+    font-size: 2em;
+    padding: 10px 0 0;
+text-decoration: none;
+-webkit-transition: background 0.3s ease;
+-moz-transition: background 0.3s ease;
+-o-transition: background 0.3s ease;
+transition: background 0.3s ease;
+/*box-shadow: 20px 15px 55px 0 rgba(0,0,0,0.3);*/
+/*
+    background: -moz-linear-gradient(left,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0) 18%, rgba(0,0,0,0) 86%);
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,rgba(0,0,0,0.65)), color-stop(18%,rgba(0,0,0,0)), color-stop(86%,rgba(0,0,0,0)));
+    background: -webkit-linear-gradient(left,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 18%,rgba(0,0,0,0) 86%);
+    background: -o-linear-gradient(left,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 18%,rgba(0,0,0,0) 86%);
+    background: -ms-linear-gradient(left,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 18%,rgba(0,0,0,0) 86%);
+    background: linear-gradient(to right,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 18%,rgba(0,0,0,0) 86%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=1 );*/
+}
+.main-nav a:hover {
+    background-color: #efb54a;
+}
 
 /* page elements
 ----------------------------------------------------------*/
@@ -757,4 +781,54 @@ tr.pager td {
         footer p {
             margin: 0;
         }
+}
+
+/*  Fonts   */
+@font-face {
+	font-family: 'icomoon';
+	src:url('/Content/themes/base/fonts/icomoon.eot');
+	src:url('/Content/themes/base/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('/Content/themes/base/fonts/icomoon.woff') format('woff'),
+		url('/Content/themes/base/fonts/icomoon.ttf') format('truetype'),
+		url('/Content/themes/base/fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+/* Use the following CSS code if you want to use data attributes for inserting your icons */
+[data-icon]:before {
+	font-family: 'icomoon';
+	content: attr(data-icon);
+	speak: none;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+}
+
+/* Use the following CSS code if you want to have a class per icon */
+/*
+Instead of a list of all class selectors,
+you can use the generic selector below, but it's slower:
+[class*="icon-"]:before {
+*/
+.icon-home:before, .icon-cog:before, .icon-menu:before {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+}
+.icon-home:before {
+	content: "\21";
+}
+.icon-cog:before {
+	content: "\22";
+}
+.icon-menu:before {
+	content: "\23";
 }
