--- a/Volunteer Iowa Site/Views/Shared/_Layout.cshtml
+++ b/Volunteer Iowa Site/Views/Shared/_Layout.cshtml
@@ -53,9 +53,7 @@
         </div>
         <footer>
             <div class="content-wrapper">
-                <div class="float-left">
-                    <p>&copy; @DateTime.Now.Year - My ASP.NET MVC Application</p>
-                </div>
+                    <p>&copy; @DateTime.Now.Year - <a href="http://www.volunteeriowa.org/">Volunteer Iowa</a></p>
             </div>
         </footer>
 
