--- a/Volunteer Iowa Site/Views/Shared/_Layout.cshtml
+++ b/Volunteer Iowa Site/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
                 <div class="float-left">
                     <p class="site-title">
                         <a href="/">
-                            <img src="/Content/themes/base/images/Volunteer_IA_2color.png" />
+                            <img src="/Content/themes/base/images/v-iowa.svg" />
                         </a>
                     </p>
                 </div>
@@ -30,9 +30,9 @@
         <div id="body">
 
             <nav class="main-nav">
-            <a class="menu-action-link" href="@Url.Action("Index", "Home")"><span aria-hidden="true" data-icon="&#x21;"></span>Home</a>
-            <a class="menu-action-link" href="@Url.Action("About", "Home")"><span aria-hidden="true" data-icon="&#x22;"></span>About</a>
-            <a class="menu-action-link" href="@Url.Action( "Index","Log")"><span aria-hidden="true" data-icon="&#x23;"></span>Log</a>
+            <a class="menu-action-link" href="@Url.Action("Index", "Home")"><span  class="icon-home" aria-hidden="true" data-icon="H"></span>Home</a>
+            <a class="menu-action-link" href="@Url.Action("About", "Home")"><span  class="icon-cogs" aria-hidden="true" ></span>About</a>
+            <a class="menu-action-link" href="@Url.Action( "Index","Log")"><span class="icon-quill" aria-hidden="true" /></span>Log</a>
             </nav>
             <!--
             <nav class="main-nav">
